RESOLVED FIXED71025
HiDPI: REGRESSION (r97191): Clients can't reliably determine the scale factor of snapshots returned via WKBundlePageCreateSnapshot* API
https://bugs.webkit.org/show_bug.cgi?id=71025
Summary HiDPI: REGRESSION (r97191): Clients can't reliably determine the scale factor...
Adam Roben (:aroben)
Reported 2011-10-27 09:03:46 PDT
r97191 (bug 69874) changed the behavior of the WKBundlePageCreateSnapshot* API to return snapshots that are scaled to match the view's backing scale factor. But there's no way to figure out what the backing scale factor is from injected bundle code, so clients can't figure out how to display these snapshots correctly.
Attachments
Add WKBundlePageGetBackingScaleFactor (18.13 KB, patch)
2011-10-27 09:13 PDT, Adam Roben (:aroben)
sam: review+
Radar WebKit Bug Importer
Comment 1 2011-10-27 09:04:32 PDT
Adam Roben (:aroben)
Comment 2 2011-10-27 09:13:50 PDT
Created attachment 112693 [details] Add WKBundlePageGetBackingScaleFactor
Adam Roben (:aroben)
Comment 3 2011-10-27 09:25:08 PDT
Note You need to log in before you can comment on or make changes to this bug.