Add WKBundlePageGetBackingScaleFactor

Fixes <http://webkit.org/b/71025> <rdar://problem/10355037> REGRESSION (r97191): Clients
can't reliably determine the scale factor of snapshots returned via
WKBundlePageCreateSnapshot* API

Reviewed by Sam Weinig.

Source/WebKit2:

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageGetBackingScaleFactor):
* WebProcess/InjectedBundle/API/c/WKBundlePage.h:
Added. Calls through to WebPage::deviceScaleFactor.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::deviceScaleFactor):
* WebProcess/WebPage/WebPage.h:
Added. Calls through to Page::deviceScaleFactor.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added new files.

* TestWebKitAPI/Tests/WebKit2/mac/GetBackingScaleFactor.mm: Added.
(TestWebKitAPI::didReceiveMessageFromInjectedBundle): Record the passed-back scale factor.
(TestWebKitAPI::setInjectedBundleClient): Hook up our didReceiveMessage callback.
(TestWebKitAPI::createWindow): Conjure up a window.
(TestWebKitAPI::TEST): Ask the injected bundle code to call the new
WKBundlePageGetBackingScaleFactor API when the WKView is in windows with various scale
factors and when using a custom scale factor, and check that we get those same scale factors
back.

* TestWebKitAPI/Tests/WebKit2/mac/GetBackingScaleFactor_Bundle.mm: Added.
(TestWebKitAPI::GetBackingScaleFactorTest::GetBackingScaleFactorTest): Just initialize our
members.
(TestWebKitAPI::GetBackingScaleFactorTest::didCreatePage): Store the page for later.
(TestWebKitAPI::GetBackingScaleFactorTest::didReceiveMessage): Get the backing scale factor
from the page using the new API and send it back.

Canonical link: https://commits.webkit.org/87228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98588 268f45cc-cd09-0410-ab3c-d52691b4dbfc