Source/WebKit2/WebProcess/WebPage/WebPage.h
@@ -431,6 +431,7 @@ public:
     void runModal();
 
     void setDeviceScaleFactor(float);
+    float deviceScaleFactor() const;
 
     void setMemoryCacheMessagesEnabled(bool);
 
